Updated OpenApi docs
